--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
         <input type="text" id="reg-name" placeholder="name" required />
       </div>
       <button id="register-btn">Register</button>
-      <p class="toggle"><a href="login.html">have an account? Login</a></p>
+      <p class="toggle"><a href="index1.html">have an account? Login</a></p>
     </div>
 
     <script>
@@ -46,7 +46,7 @@
         localStorage.setItem("users", JSON.stringify(users));
         localStorage.setItem("loginuser", JSON.stringify(newuser));
         alert("Register");
-        window.location.href = "dashboard.html";
+        window.location.href = "index.html";
       });
     </script>
   </body>
