--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
         </div>
         <button id="login-btn">Login</button>
         <p class="toggle">
-          <a href="signup.html">Don't have an account? Register</a>
+          <a href="index2.html">Don't have an account? Register</a>
         </p>
       </div>
     </div>
@@ -40,7 +40,7 @@
         if (storeuser) {
           alert("login");
           localStorage.setItem("loginuser", JSON.stringify(storeuser));
-          window.location.href = "dashboard.html";
+          window.location.href = "index.html";
         } else {
           alert("Not Found");
         }
